--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:500&display=swap');
+
 body {
 	width: 100wh;
 	height: 90vh;
@@ -67,13 +69,27 @@ body {
 	}
 }
 
-h1,
-h6 {
-	font-family: 'Open Sans';
-	font-weight: 300;
-	text-align: center;
-	position: absolute;
-	top: 45%;
-	right: 0;
-	left: 0;
+@media (min-height: 320px) {
+	.ui.footer { /* Increased specificity for SO snippet priority */
+	  position: absolute;
+	  bottom: 0;
+	  width: 100%;
+	}
+}
+
+#main-column {
+	margin-top: 30%
+}
+
+#main-heading {
+	font-family: 'Montserrat', sans-serif;
+	color: white;
+	font-size: 100px;
+
+}
+
+#sub-header {
+	font-family: 'Montserrat', sans-serif;
+	color: white;
+	font-size: 40px;
 }
