Animations and routes

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,8 +1,20 @@
-<div class="ui container">
-  <div class="ui centered grid">
+<div class="ui container" >
+  <div class="ui centered grid fade-in one">
     <div id="main-column" class="centered aligned column">
       <h1 id="main-heading" class="ui header">Zubeir Mohamed</h1>
       <h2 id="sub-header">Student and Software Developer</h2>
+      <a href=""><img id="icon" src="https://imgur.com/rgQTKmk.png" width="65px" alt="mail_logo"></a>&nbsp;
+      <a href=""><img id="icon" src="https://imgur.com/TqvrnCr.png" width="65px" alt="twitter_logo"></a>&nbsp;
+      <a href=""><img id="icon" src="https://imgur.com/Bf383A2.png" width="65px" alt="linkedin_logo"></a>&nbsp;
+      <a href=""><img id="icon" src="https://imgur.com/e4ZP8u5.png" width="65px" alt="github_logo"></a>&nbsp;
+      <br>
+      <br>
+      {{#link-to "about" class="menu"}}
+        About Me
+      {{/link-to}}&nbsp;&nbsp;
+      {{#link-to "projects" class="menu"}}
+        Projects
+      {{/link-to}}
     </div>
   </div>
 </div>
