--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Muli:300&display=swap');
 
 body {
 	width: 100wh;
@@ -84,12 +85,66 @@ body {
 #main-heading {
 	font-family: 'Montserrat', sans-serif;
 	color: white;
-	font-size: 100px;
+	font-size: 5vw;
 
 }
 
 #sub-header {
 	font-family: 'Montserrat', sans-serif;
 	color: white;
-	font-size: 40px;
+	font-size:2vw;
 }
+
+#icon {
+	width: 5%;
+	height: auto;
+	transition-duration: 0.8s;
+}
+
+#icon:hover {
+	width: 6%;
+	height: auto;
+	transition-duration: 0.8s
+}
+
+.menu {
+	color: inherit;
+	font-family: 'Muli', sans-serif;
+	font-size:1.3vw;
+	transition-duration: 0.6s
+}
+
+.menu:hover {
+	color: inherit;
+	font-size: 1.6vw;
+	transition-duration: 0.6s
+}
+
+
+/* make keyframes that tell the start state and the end state of our object */
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+.fade-in {
+  opacity:0;  /* make things invisible upon start */
+  -webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation:fadeIn ease-in 1;
+  animation:fadeIn ease-in 1;
+
+  -webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+
+  -webkit-animation-duration:1.2s;
+  -moz-animation-duration:1.2s;
+  animation-duration:1.2s;
+}
+
+.fade-in.one {
+  -webkit-animation-delay: 1.2s;
+  -moz-animation-delay: 1.2s;
+  animation-delay: 1.2s;
+}
+
+/*---make a basic box ---*/
