Add resume button for redirection to pdf

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -14,7 +14,10 @@
       {{/link-to}}&nbsp;&nbsp;
       {{#link-to "projects" class="menu"}}
         Projects
-      {{/link-to}}
+      {{/link-to}}&nbsp;&nbsp;
+      <a href="" class="menu">
+        Resume
+      </a>
     </div>
   </div>
 </div>
