--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -107,6 +107,15 @@ body {
 	}
 }
 
+@media  screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 896px) {
+	  
+	#main-heading {
+		font-size: 1vw;
+	}
+}
+
 #main-column {
 	margin-top: 30%
 }
@@ -118,14 +127,13 @@ body {
 #main-heading {
 	font-family: 'Montserrat', sans-serif;
 	color: white;
-	font-size: 5vw;
-
+	font-size: 5vw
 }
 
 #sub-header {
 	font-family: 'Montserrat', sans-serif;
 	color: white;
-	font-size:2vw;
+	font-size: 3vw;
 }
 
 #icon {
@@ -143,24 +151,23 @@ body {
 .menu {
 	color: inherit;
 	font-family: 'Muli', sans-serif;
-	font-size:1.3vw;
-	transition-duration: 0.6s
+	transition-duration: 0.6s;
+	font-size: 18px
 }
 
 .menu:hover {
 	color: inherit;
-	font-size: 1.6vw;
+	font-size: 20px;
 	transition-duration: 0.6s
 }
 
 h3 {
 	font-family: 'Montserrat', sans-serif;
-	font-size: 3vw;
 	color: white
 }
 
 p {
 	font-family:'Lato', sans-serif;
-	font-size: 1vw;
+	font-size: 20px;
 }
 
