--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,12 +1,12 @@
 <div class="ui container" >
   <div class="ui centered grid fade-in one">
     <div id="main-column" class="centered aligned column">
-      <h1 id="main-heading" class="ui header">Zubeir Mohamed</h1>
-      <h2 id="sub-header">Student and Software Developer</h2>
-      <a href=""><img id="icon" src="https://imgur.com/rgQTKmk.png" width="65px" alt="mail_logo"></a>&nbsp;
-      <a href=""><img id="icon" src="https://imgur.com/TqvrnCr.png" width="65px" alt="twitter_logo"></a>&nbsp;
-      <a href=""><img id="icon" src="https://imgur.com/Bf383A2.png" width="65px" alt="linkedin_logo"></a>&nbsp;
-      <a href=""><img id="icon" src="https://imgur.com/e4ZP8u5.png" width="65px" alt="github_logo"></a>&nbsp;
+      <h1 id="main-heading" class="ui large header">Zubeir Mohamed</h1>
+      <h2 id="sub-header" class="ui header">Student and Software Developer</h2>
+      <a href="mailto:zubeir.mohamed@outlook.de"><img id="icon" src="https://imgur.com/rgQTKmk.png" width="65px" alt="mail_logo"></a>&nbsp;
+      <a href="https://www.linkedin.com/in/zubeir-mohamed-29668217b/"><img id="icon" src="https://imgur.com/TqvrnCr.png" width="65px" alt="twitter_logo"></a>&nbsp;
+      <a href="https://github.com/zubeir68"><img id="icon" src="https://imgur.com/Bf383A2.png" width="65px" alt="linkedin_logo"></a>&nbsp;
+      <a href="http://twitter.com/ZubeirMohamed2"><img id="icon" src="https://imgur.com/e4ZP8u5.png" width="65px" alt="github_logo"></a>&nbsp;
       <br>
       <br>
       {{#link-to "about" class="menu"}}
