--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -2,6 +2,13 @@
 @import url('https://fonts.googleapis.com/css?family=Muli:300&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
+@media only screen 	and (max-width: 896px) {
+	  
+	.project-list {
+		font-size: 1px;
+	}
+}
+
 body {
 	width: 100wh;
 	height: 90vh;
@@ -107,15 +114,6 @@ body {
 	}
 }
 
-@media  screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 896px) {
-	  
-	#main-heading {
-		font-size: 1vw;
-	}
-}
-
 #main-column {
 	margin-top: 30%
 }
@@ -170,4 +168,39 @@ p {
 	font-family:'Lato', sans-serif;
 	font-size: 20px;
 }
+
+.project-list {
+	font-size: 15px;
+	font-family: 'Montserrat', sans-serif;
+	opacity: 0.6;
+	transition-duration: 0.6s
+}
+.project-list:hover {
+	font-size: 15px;
+	transition-duration: 0.6s;
+	opacity: 1;
+	font-family: 'Montserrat', sans-serif;
+}
+
+.projectInfoColumn {
+	margin-top: 30%;
+}
+
+hr {
+	padding-top: 12px;
+	background-color: white
+}
+
+.thirtypercent {
+	margin-right: 200px;
+}
+
+.twentypercent {
+	margin-right: 320px;
+}
+
+.onepercent {
+	margin-right: 360px;
+}
+
 
