add target blank and right redirect

--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -24,7 +24,7 @@
                 <div class="twelve wide column projectInfoColumn">
                     {{#if cino_ }}
                       <div class="ui basic segment wow fadeInRight" data-wow-delay="0.3s">
-                        <a  href="https://cinosixeight.de"><img class="ui medium rounded image" src="https://imgur.com/zMOOQnh.png"width="400px"  alt="cino_page"></a>
+                        <a  href="https://cinosixeight.de" target="_blank"><img class="ui medium rounded image" src="https://imgur.com/zMOOQnh.png"width="400px"  alt="cino_page"></a>
                         <br>
                         Portfolio Page that basically gives info to Person and Event.   Also using mutliple widgets
 
@@ -38,7 +38,7 @@
                     {{/if}}
                     {{#if dothemathright_ }}
                       <div class="ui basic segment wow fadeInRight" data-wow-delay="0.3s">
-                        <a  href="https://cinosixeight.de"><img class="ui medium rounded image" src="https://imgur.com/Q2LI1jf.png"width="400px"  alt="cino_page"></a>
+                        <a  href="https://dothemathright.herokuapp.com" target="_blank"><img class="ui medium rounded image" src="https://imgur.com/Q2LI1jf.png"width="400px"  alt="cino_page"></a>
                         <br>
                         One Input field that can calculate, convert or validate your value, powered by Math.js
 
