fix bug, and add menu project route

--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -5,7 +5,13 @@
             <br>
             <br>
             <h1>PROJECTS</h1>
-            <br>
+            {{#link-to "application" class="menu"}}
+              Home
+            {{/link-to}}&nbsp;&nbsp;
+            {{#link-to "projects" class="menu"}}
+              Projects
+            {{/link-to}}&nbsp;&nbsp;  
+            <a class="menu" href="">Resume</a>
             <br>
             <br>
             <br>
