--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -192,15 +192,15 @@ hr {
 }
 
 .thirtypercent {
-	margin-right: 200px;
+	margin-right: 12vw;
 }
 
 .twentypercent {
-	margin-right: 320px;
+	margin-right: 15vw;
 }
 
 .onepercent {
-	margin-right: 360px;
+	margin-right: 19vw;
 }
 
 
