--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -19,7 +19,7 @@
               {{#link-to "projects" class="menu"}}
                Projects
               {{/link-to}}&nbsp;&nbsp;  
-              <a class="menu" href="">Resume</a>
+              <a class="menu" target="_blank" href="https://drive.google.com/file/d/16za7kbg7ebgA8wSm2i_SnR77Wx_1nLRM/view?usp=sharing">Resume</a>
             </div>
             <div class="three wide column"></div>
         </div>
