--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -15,7 +15,7 @@
       {{#link-to "projects" class="menu"}}
         Projects
       {{/link-to}}&nbsp;&nbsp;
-      <a href="" class="menu">
+      <a href="https://drive.google.com/file/d/16za7kbg7ebgA8wSm2i_SnR77Wx_1nLRM/view?usp=sharing" class="menu" target="_blank">
         Resume
       </a>
     </div>
