--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -11,7 +11,7 @@
             {{#link-to "projects" class="menu"}}
               Projects
             {{/link-to}}&nbsp;&nbsp;  
-            <a class="menu" href="">Resume</a>
+            <a class="menu" target="_blank" href="https://drive.google.com/file/d/16za7kbg7ebgA8wSm2i_SnR77Wx_1nLRM/view?usp=sharing">Resume</a>
             <br>
             <br>
             <br>
