add weight trakcing project

--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -20,6 +20,7 @@
                 {{#ember-scrollable autoHide=false}}
                   <h2 class="project-list" role="button"  {{action "cino"}}>CINO - Speaker and Positive Influencer</h2>
                   <h2 class="project-list" role="button"  {{action "dothemathright"}}>DoTheMathRight - the Super-Calculator</h2>
+                  <h2 class="project-list" role="button" {{action "myweightjourney"}}>My Weight Journey - Weight Tracker</h2>
                 {{/ember-scrollable}}
             </div>
             
@@ -53,6 +54,20 @@
                         <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">JavaScript 23.7%</h3>
                         <hr class="thirtypercent wow fadeInRight" data-wow-delay="1s">
                         <h3 class="ui small header wow fadeInRight" data-wow-delay="1.2s" style="color: white">CSS 1.7%</h3>
+                        <hr class="onepercent wow fadeInRight" data-wow-delay="1.2s">
+                      </div>
+                    {{/if}}
+                    {{#if myweightjourney_ }}
+                      <div class="ui basic segment wow fadeInRight" data-wow-delay="0.3s">
+                        <a  href="https://dothemathright.herokuapp.com" target="_blank"><img class="ui medium rounded image" src="https://imgur.com/Q2LI1jf.png"width="400px"  alt="cino_page"></a>
+                        <br>
+                        Simple weight tracking app with graph using ember.js, express, mongoose and mongodb
+
+                        <h3 class="ui small header wow fadeInRight" data-wow-delay="0.8s" style="color: white">Node.js 80.9%</h3>
+                        <hr class="wow fadeInRight" data-wow-delay="0.8s">
+                        <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">JavaScript 15%</h3>
+                        <hr class="thirtypercent wow fadeInRight" data-wow-delay="1s">
+                        <h3 class="ui small header wow fadeInRight" data-wow-delay="1.2s" style="color: white">CSS 4.5%</h3>
                         <hr class="onepercent wow fadeInRight" data-wow-delay="1.2s">
                       </div>
                     {{/if}}
