add links and image

--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -59,7 +59,7 @@
                     {{/if}}
                     {{#if myweightjourney_ }}
                       <div class="ui basic segment wow fadeInRight" data-wow-delay="0.3s">
-                        <a  href="https://dothemathright.herokuapp.com" target="_blank"><img class="ui medium rounded image" src="https://imgur.com/Q2LI1jf.png"width="400px"  alt="cino_page"></a>
+                        <a  href="https://myweightjourney.herokuapp.com" target="_blank"><img class="ui medium rounded image" src="https://imgur.com/hlSFMoW.png"width="400px"  alt="weighttrackingapp"></a>
                         <br>
                         Simple weight tracking app with graph using ember.js, express, mongoose and mongodb
 
