--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -65,7 +65,7 @@
 
                         <h3 class="ui small header wow fadeInRight" data-wow-delay="0.8s" style="color: white">Node.js 80.9%</h3>
                         <hr class="wow fadeInRight" data-wow-delay="0.8s">
-                        <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">JavaScript 15%</h3>
+                        <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">HTML 15%</h3>
                         <hr class="thirtypercent wow fadeInRight" data-wow-delay="1s">
                         <h3 class="ui small header wow fadeInRight" data-wow-delay="1.2s" style="color: white">CSS 4.5%</h3>
                         <hr class="onepercent wow fadeInRight" data-wow-delay="1.2s">
