--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -64,11 +64,11 @@
                         <br>
                         Simple weight tracking app with graph using ember.js, express, mongoose and mongodb
 
-                        <h3 class="ui small header wow fadeInRight" data-wow-delay="0.8s" style="color: white">Node.js 40.9%</h3>
+                        <h3 class="ui small header wow fadeInRight" data-wow-delay="0.8s" style="color: white">Ember.js 50.9%</h3>
                         <hr class="wow fadeInRight" data-wow-delay="0.8s">
-                        <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">Ember.js 50%</h3>
+                        <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">Express.js 40%</h3>
                         <hr class="thirtypercent wow fadeInRight" data-wow-delay="1s">
-                        <h3 class="ui small header wow fadeInRight" data-wow-delay="1.2s" style="color: white">MongoDB 9.1%</h3>
+                        <h3 class="ui small header wow fadeInRight" data-wow-delay="1.2s" style="color: white">MongoDB - Mongoose 9.1%</h3>
                         <hr class="onepercent wow fadeInRight" data-wow-delay="1.2s">
                       </div>
                     {{/if}}
@@ -77,11 +77,11 @@
                         <a  href="https://sentrybills.herokuapp.com" target="_blank"><img class="ui medium rounded image" src="https://imgur.com/uJbTx3G.png"width="400px"  alt="weighttrackingapp"></a>
                         <br>
                         Sentrybills - Awesome Bill tracking App build with Ember.js, Express, mongoose and mongodb 
-                        <h3 class="ui small header wow fadeInRight" data-wow-delay="0.8s" style="color: white">Node.js 30.9%</h3>
+                        <h3 class="ui small header wow fadeInRight" data-wow-delay="0.8s" style="color: white">Ember.js 43.9%</h3>
                         <hr class="wow fadeInRight" data-wow-delay="0.8s">
-                        <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">Ember.js 63%</h3>
+                        <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">Express.js 40%</h3>
                         <hr class="thirtypercent wow fadeInRight" data-wow-delay="1s">
-                        <h3 class="ui small header wow fadeInRight" data-wow-delay="1.2s" style="color: white">MongoDB 6.1%</h3>
+                        <h3 class="ui small header wow fadeInRight" data-wow-delay="1.2s" style="color: white">MongoDB - Mongoose 16.1%</h3>
                         <hr class="onepercent wow fadeInRight" data-wow-delay="1.2s">
                       </div>
                     {{/if}}
