--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -13,7 +13,7 @@ body {
 	width: 100wh;
 	height: 90vh;
 	color: #fff;
-	background: linear-gradient(-45deg, #0B132B, #1C2541, #3A506B, #420039, #D72638);
+	background: linear-gradient(-45deg, black, rgba(23,25,95,1), rgba(20,100,196,1), rgba(14,11,56,1) , rgba(239,37,37,1));
 	background-size: 400% 400%;
 	-webkit-animation: Gradient 15s ease infinite;
 	-moz-animation: Gradient 15s ease infinite;
