--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -18,6 +18,7 @@
             <br>
             <div style="height: 650px">
                 {{#ember-scrollable autoHide=false}}
+                  <h2 class="project-list" role="button"  {{action "aptool"}}  style="cursor: pointer" >Aptool - The Application Process Tool</h2>
                   <h2 class="project-list" role="button" {{action "sentrybills"}}  style="cursor: pointer" >Sentrybills - The Best Bill Tracker App</h2>
                   <h2 class="project-list" role="button" {{action "easynet"}}  style="cursor: pointer" >Easynet - A Simple Social Network</h2>
                   <h2 class="project-list" role="button" {{action "idyll"}}  style="cursor: pointer" >Idyll - Multiple Sources in one place</h2>
@@ -106,7 +107,7 @@
                     {{#if easynet_ }}
                     <div class="ui basic segment wow fadeInRight" data-wow-delay="0.3s">
                       <a href="https://easynet.herokuapp.com" target="_blank"><img class="ui medium rounded image"
-                          src="https://imgur.com/yWCYNBe.png" width="400px" alt="idyll"></a>
+                          src="https://imgur.com/yWCYNBe.png" width="400px" alt="easynet"></a>
                       <br>
                       A simple Social Network where you post and personalize your Account using Express, Postgres and Ember <a href="https://github.com/zubeir68/server-easynet" style="color: inherit" target="_blank">
                         <i class="github icon"></i>
@@ -117,6 +118,24 @@
                       <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">Ember.js 20%</h3>
                       <hr class="thirtypercent wow fadeInRight" data-wow-delay="1s">
                       <h3 class="ui small header wow fadeInRight" data-wow-delay="1.2s" style="color: white">Postgres 15%</h3>
+                      <hr class="onepercent wow fadeInRight" data-wow-delay="1.2s">
+                    </div>
+                    {{/if}}
+                    {{#if aptool_ }}
+                    <div class="ui basic segment wow fadeInRight" data-wow-delay="0.3s">
+                      <a href="https://aptool.herokuapp.com" target="_blank"><img class="ui medium rounded image"
+                          src="https://imgur.com/bqv9aeY.png" width="400px" alt="aptool"></a>
+                      <br>
+                      Aptool helps you organize your applications you can also search for jobs within the tool <a
+                        href="https://github.com/zubeir68/aptool" style="color: inherit" target="_blank">
+                        <i class="github icon"></i>
+                      </a>
+                    
+                      <h3 class="ui small header wow fadeInRight" data-wow-delay="0.8s" style="color: white">Express.js 60%</h3>
+                      <hr class="wow fadeInRight" data-wow-delay="0.8s">
+                      <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">Ember.js 15%</h3>
+                      <hr class="thirtypercent wow fadeInRight" data-wow-delay="1s">
+                      <h3 class="ui small header wow fadeInRight" data-wow-delay="1.2s" style="color: white">Postgres 25%</h3>
                       <hr class="onepercent wow fadeInRight" data-wow-delay="1.2s">
                     </div>
                     {{/if}}
