--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -123,7 +123,7 @@
                     {{/if}}
                     {{#if aptool_ }}
                     <div class="ui basic segment wow fadeInRight" data-wow-delay="0.3s">
-                      <a href="https://aptool.herokuapp.com" target="_blank"><img class="ui medium rounded image"
+                      <a href="https://aptool.firebaseapp.com" target="_blank"><img class="ui medium rounded image"
                           src="https://imgur.com/bqv9aeY.png" width="400px" alt="aptool"></a>
                       <br>
                       Aptool helps you organize your applications you can also search for jobs within the tool <a
