--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -77,7 +77,7 @@
                     {{/if}}
                     {{#if sentrybills_ }}
                       <div class="ui basic segment wow fadeInRight" data-wow-delay="0.3s">
-                        <a  href="https://sentrybills.herokuapp.com" target="_blank"><img class="ui medium rounded image" src="https://imgur.com/uJbTx3G.png"width="400px"  alt="weighttrackingapp"></a>
+                        <a  href="https://sentrybills1.firebaseapp.com" target="_blank"><img class="ui medium rounded image" src="https://imgur.com/uJbTx3G.png"width="400px"  alt="weighttrackingapp"></a>
                         <br>
                         Sentrybills - Awesome Bill tracking App build with Ember.js, Express, mongoose and mongodb <a href="https://github.com/zubeir68/sentrybills-server" style="color: inherit" target="_blank"> <i class="github icon"></i></a>
                         <h3 class="ui small header wow fadeInRight" data-wow-delay="0.8s" style="color: white">Ember.js 43.9%</h3>
@@ -106,7 +106,7 @@
                     {{/if}}
                     {{#if easynet_ }}
                     <div class="ui basic segment wow fadeInRight" data-wow-delay="0.3s">
-                      <a href="https://easynet.herokuapp.com" target="_blank"><img class="ui medium rounded image"
+                      <a href="https://easynet.firebaseapp.com" target="_blank"><img class="ui medium rounded image"
                           src="https://imgur.com/yWCYNBe.png" width="400px" alt="easynet"></a>
                       <br>
                       A simple Social Network where you post and personalize your Account using Express, Postgres and Ember <a href="https://github.com/zubeir68/server-easynet" style="color: inherit" target="_blank">
