new image and small text change with emoji

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -9,8 +9,8 @@
         <div class="ui grid">
             <div class="three wide column"></div>
             <div class="ten wide column">
-              <img class="ui small left rounded floated image" src="https://imgur.com/6qdXap7.png" width="200px" alt="me">
-              <p>Hi, my name is Zubeir Mohamed I am a Computer Science Student and working student as a Software Developer. I started coding about 2 years ago and felt in love ever since. My goal is to impact peoples life by solving problems through software and reach the full potential of my creativity. My hobbies are building apps and playing basketball. My favourite and best languages are Node.js and Python and for the frontend Emberjs. If you want to network and reach out to me, just go to the <a href="/">Home</a> Page and use any social-link you like. LET'S CONNECT</p>
+              <img class="ui small left rounded floated image" src="https://imgur.com/9Mc3IiI.png" width="200px" alt="me">
+              <p>Hi, my name is Zubeir Mohamed I am a Data Science and AI Student and Intern as a Software Developer for more than a year now. I started coding about 2 years ago and felt in love ever since. My goal is to impact peoples life by solving problems through software and reach the full potential of my creativity. My hobbies are building apps and playing basketball. My favourite and best languages are Node.js and Python and for the frontend Emberjs. If you want to network and reach out to me, just go to the <a href="/">Home</a> Page and use any social-link you like. LET'S CONNECT 😄</p>
               <br>
               <br>
               {{#link-to "application" class="menu"}}
