--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -19,6 +19,7 @@
             <div style="height: 650px">
                 {{#ember-scrollable autoHide=false}}
                   <h2 class="project-list" role="button"  {{action "aptool"}}  style="cursor: pointer" >Aptool - The Application Process Tool</h2>
+                  <h2 class="project-list" role="button"  {{action "qard"}}  style="cursor: pointer" >Qard - The Digital Business Card</h2>
                   <h2 class="project-list" role="button" {{action "sentrybills"}}  style="cursor: pointer" >Sentrybills - The Best Bill Tracker App</h2>
                   <h2 class="project-list" role="button" {{action "easynet"}}  style="cursor: pointer" >Easynet - A Simple Social Network</h2>
                   <h2 class="project-list" role="button" {{action "idyll"}}  style="cursor: pointer" >Idyll - Multiple Sources in one place</h2>
@@ -136,6 +137,24 @@
                       <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">Ember.js 15%</h3>
                       <hr class="thirtypercent wow fadeInRight" data-wow-delay="1s">
                       <h3 class="ui small header wow fadeInRight" data-wow-delay="1.2s" style="color: white">Postgres 25%</h3>
+                      <hr class="onepercent wow fadeInRight" data-wow-delay="1.2s">
+                    </div>
+                    {{/if}}
+                    {{#if qard_ }}
+                    <div class="ui basic segment wow fadeInRight" data-wow-delay="0.3s">
+                      <a href="https://qard-app.firebaseapp.com" target="_blank" rel="noopener"><img class="ui medium rounded image"
+                          src="https://i.imgur.com/cnDjv7A.png" width="400px" alt="aptool"></a>
+                      <br>
+                      Be able to save your socials and share them with a QR-Code, instead of walking around with pieces of paper <a
+                        href="https://github.com/zubeir68/aptool" style="color: inherit" target="_blank">
+                        <i class="github icon"></i>
+                      </a>
+                    
+                      <h3 class="ui small header wow fadeInRight" data-wow-delay="0.8s" style="color: white">Ember.js 50%</h3>
+                      <hr class="wow fadeInRight" data-wow-delay="0.8s">
+                      <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">Express.js 40%</h3>
+                      <hr class="thirtypercent wow fadeInRight" data-wow-delay="1s">
+                      <h3 class="ui small header wow fadeInRight" data-wow-delay="1.2s" style="color: white">MongoDB 10%</h3>
                       <hr class="onepercent wow fadeInRight" data-wow-delay="1.2s">
                     </div>
                     {{/if}}
