set github repo and disable template linting

--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -1,4 +1,5 @@
 {{outlet}}
+{{! template-lint-disable }}
 <div class="ui container">
     <div class="ui centered grid fade-in one">
         <div class="six wide column">
@@ -146,7 +147,7 @@
                           src="https://i.imgur.com/cnDjv7A.png" width="400px" alt="aptool"></a>
                       <br>
                       Be able to save your socials and share them with a QR-Code, instead of walking around with pieces of paper <a
-                        href="https://github.com/zubeir68/aptool" style="color: inherit" target="_blank">
+                        href="https://github.com/zubeir68/qard" style="color: inherit" target="_blank">
                         <i class="github icon"></i>
                       </a>
                     
