change twitter username

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -6,7 +6,7 @@
       <a target="_blank" href="mailto:zubeir.mohamed@outlook.de"><img id="icon" src="https://imgur.com/rgQTKmk.png" width="65px" alt="mail_logo"></a>&nbsp;
       <a target="_blank" href="https://www.linkedin.com/in/zubeir-mohamed-29668217b/"><img id="icon" src="https://imgur.com/TqvrnCr.png" width="65px" alt="twitter_logo"></a>&nbsp;
       <a target="_blank" href="https://github.com/zubeir68"><img id="icon" src="https://imgur.com/Bf383A2.png" width="65px" alt="linkedin_logo"></a>&nbsp;
-      <a target="_blank" href="http://twitter.com/ZubeirMohamed2"><img id="icon" src="https://imgur.com/e4ZP8u5.png" width="65px" alt="github_logo"></a>&nbsp;
+      <a target="_blank" href="http://twitter.com/zubeirtech"><img id="icon" src="https://imgur.com/e4ZP8u5.png" width="65px" alt="github_logo"></a>&nbsp;
       <br>
       <br>
       {{#link-to "about" class="menu"}}
