--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -27,6 +27,7 @@
                   <h2 class="project-list" role="button"  {{action "dothemathright"}}  style="cursor: pointer" >DoTheMathRight - the Super-Calculator</h2>
                   <h2 class="project-list" role="button" {{action "myweightjourney"}}  style="cursor: pointer" >My Weight Journey - Weight Tracker</h2>
                   <h2 class="project-list" role="button"  {{action "cino"}}  style="cursor: pointer" >CINO - Speaker and Positive Influencer</h2>
+                  <h2 class="project-list" role="button"  {{action "nile"}}  style="cursor: pointer" >The Nile - Video Streaming Plattform</h2>
                 {{/ember-scrollable}}
             </div>
             
@@ -156,6 +157,24 @@
                       <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">Express.js 40%</h3>
                       <hr class="thirtypercent wow fadeInRight" data-wow-delay="1s">
                       <h3 class="ui small header wow fadeInRight" data-wow-delay="1.2s" style="color: white">MongoDB 10%</h3>
+                      <hr class="onepercent wow fadeInRight" data-wow-delay="1.2s">
+                    </div>
+                    {{/if}}
+                    {{#if nile_ }}
+                    <div class="ui basic segment wow fadeInRight" data-wow-delay="0.3s">
+                      <a href="https://qard-app.firebaseapp.com" target="_blank" rel="noopener"><img class="ui medium rounded image"
+                          src="https://i.imgur.com/cnDjv7A.png" width="400px" alt="aptool"></a>
+                      <br>
+                      This app allows you to publish videos just like youtube or dailymotion. You can also like and comment <a
+                        href="https://github.com/zubeir68/nile" style="color: inherit" target="_blank">
+                        <i class="github icon"></i>
+                      </a>
+                    
+                      <h3 class="ui small header wow fadeInRight" data-wow-delay="0.8s" style="color: white">Ember.js 30%</h3>
+                      <hr class="wow fadeInRight" data-wow-delay="0.8s">
+                      <h3 class="ui small header wow fadeInRight" data-wow-delay="1s" style="color: white">Node & Express 40%</h3>
+                      <hr class="thirtypercent wow fadeInRight" data-wow-delay="1s">
+                      <h3 class="ui small header wow fadeInRight" data-wow-delay="1.2s" style="color: white">PostgreSQL 30%</h3>
                       <hr class="onepercent wow fadeInRight" data-wow-delay="1.2s">
                     </div>
                     {{/if}}
