new idyll link and little about page changes

--- a/app/templates/projects.hbs
+++ b/app/templates/projects.hbs
@@ -93,7 +93,7 @@
                     {{/if}}
                     {{#if idyll_ }}
                     <div class="ui basic segment wow fadeInRight" data-wow-delay="0.3s">
-                      <a href="https://idyll.herokuapp.com" target="_blank"><img class="ui medium rounded image"
+                      <a href="https://myidyll.firebaseapp.com" target="_blank"><img class="ui medium rounded image"
                           src="https://i.pinimg.com/originals/fa/a0/ae/faa0ae6540764d2e63c0ce10b6831c46.png" width="400px" alt="idyll"></a>
                       <br>
                       A simple resource App that fetches information of multiple api's like reddit, youtube, google trends, news sources and
